--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,18 @@
 body {
-  text-align: center;
+  color: #333;
+  text-align: left;
   font-family: Arial, Helvetica, sans-serif;
-  color: deeppink;
+  font-size: 16px;
+  margin: 0;
+  padding: 0;
+}
+#container {
+  width: 70%;
+  padding: 1em;
+  text-align: left;
+  border: 1px solid #333;
+  margin: 10px auto;
+}
+#container h1 {
+  font-size: 20px;
 }
