--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,13 +6,29 @@ body {
   margin: 0;
   padding: 0;
 }
+#header {
+  background-color: #33a;
+  color: white;
+  font-weight: bold;
+  box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.75);
+  margin: 0;
+  padding: 0.5em;
+}
+#header #tagline {
+  margin: 0 0 0 1em;
+  font-weight: normal;
+  font-size: 0.8em;
+}
 #container {
   width: 70%;
-  padding: 1em;
+  padding: 0;
   text-align: left;
   border: 1px solid #333;
   margin: 10px auto;
 }
 #container h1 {
   font-size: 20px;
+}
+#post {
+  padding: 1em;
 }
