--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,5 @@
 body {
+  background: #1e1f24;
   color: #333;
   text-align: left;
   font-family: monospace;
@@ -7,12 +8,16 @@ body {
   padding: 0;
 }
 #header {
-  background-color: #33a;
+  background-color: #37488b;
   color: white;
   font-weight: bold;
   box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.75);
   margin: 0;
   padding: 0.5em;
+}
+#header #logo {
+  width: 20px;
+  vertical-align: middle;
 }
 #header #tagline {
   margin: 0 0 0 1em;
@@ -30,5 +35,6 @@ body {
   font-size: 20px;
 }
 #post {
+  background: white;
   padding: 1em;
 }
