--- a/CSS/style.css
+++ b/CSS/style.css
@@ -38,8 +38,8 @@ body {
   background: white;
   padding: 1em;
 }
-#footer{
-  background: #777;
+#footer {
+  background: #37488b;
   color: white;
   text-align: center;
   padding: 0.5em;
